- Removed: Unused parsing components and data objects.
- Removed: Outdated resources.

JWKTL-0.16.3 (2013-07-16) INTERNAL RELEASE
- Added: Preparations for open source release.
- Added: DumpInfo as a new context object for the Wiktionary parsers.
- Added: IWiktionaryEntry.entryLinkType.
- Modified: Multiple WiktionaryPageParsers may now be registered for a WiktionaryDumpParser.
- Modified: Separated out database functions from WiktionaryArticle Parser.   
- Modified: Removed references from item texts.
- Modified: ENSenseIndexedBlockHandler.findMatchingSense is now public.
- Modified: Fully revised WikisaurusArticleParser.
- Modified: Simplified ENWordFormHandler.
- Modified: Switched to com.sleepycat:je:5.0.73.
- Fixed: WiktionaryArticleParser skips pages from non-default namespaces.
- Fixed: Test files are expected in UTF-8 encoding.
- Fixed: Parsing of information items with subsense markers.

JWKTL-0.17.0 (2013-07-26) INTERNAL RELEASE
- Added: Formatter for major data classes.
- Added: Additional documentation.
- Modified: New main entry "JWKTL".
- Modified: Refactored EntryFactory.
- Modified: Removed deprecated code.
- Modified: Revised example code.
- Modified: Switched to dkpro-parent-pom 4.
- Modified: Changed package name and artifact ID.
- Modified: Integrated Wikokit code.
- Modified: Preparations for open source release.
- Fixed: Definition for binary distribution.

JWKTL-0.17.1 (2013-07-26) TEST RELEASE
- Test: Open source release.

JWKTL-0.17.2 (2013-08-02) TEST RELEASE
- Test: Maven Central release.

JWKTL-1.0.0 (2013-08-06)
- First official open source release.

JWKTL-1.0.1 (2014-09-30)
- Modified: Switched to dkpro-parent-pom 9.
- Modified: Removed missing dependency xerces:xercesImpl:2.9.1-lucene; no longer needed (#7).

JWKTL-1.0.2
- Modified: Updated to xerces 2.11.0.
- Fixed: Dump parser is timezone dependent (#9).
- Fixed: Descendant relationship parsing bugs (#10).
- Added: parse gender of non-English entries in EN-Wiktionary