@@ -211,3 +211,4 @@ JWKTL-1.0.2
 - Fixed: Dump parser is timezone dependent (#9).
 - Fixed: Descendant relationship parsing bugs (#10).
 - Added: parse gender of non-English entries in EN-Wiktionary
+- Fixed: Translation extraction in the German Wiktionary (#12),
